# zephyr

./: .gitignore  404.html  CMakeLists.txt  Config.cmake.in  Doxyfile.in  README.md  compile-check.sh  configuration.h.in  format.h  index.html  markdown-page.html  sitemap.xml  transfer.cpp
problems/: CMakeLists.txt  advection.cpp  advection.cxx  burgers.cpp  convection.cpp  convection.cxx  crp.cpp  fast.h  membrane.cpp  membrane.cxx  mm_2d_tests.cpp  mm_riemann_tester.cpp  riemann.cpp  riemann.cxx  riemann_tester.cpp  riemann_tester.cxx  shock-tube.cpp  shu-osher.cxx  shu_osher.cpp  shu_osher.cxx  tests2D.cpp  transfer.cpp  wave.cpp  wave2D.cpp  weno.cpp
problems/amr/: CMakeLists.txt  interface.cxx
problems/free-boundary/: CMakeLists.txt  fb_test_1D.cpp
problems/multi-fluid/: CMakeLists.txt  mm_2d_tests.cpp  mm_riemann_tester.cpp  mmf_advection.cpp  mmf_air_water.cpp  mmf_bubble_collapse.cpp  mmf_static.cpp  mmf_test_1D.cpp  mmf_triple_point.cpp
problems/parabolic/: CMakeLists.txt  poisson.cpp
problems/single-fluid/: CMakeLists.txt  clogged_shock_tube.cpp  riemann.cpp  riemann_tester.cpp  smf_flow_around.cpp  smf_skew_wave.cpp  smf_test_1D.cpp  smf_test_2D.cpp  smf_test_3D.cpp  smf_test_3D_soa.cpp  smf_test_axial.cpp
tests/: CMakeLists.txt  geometry.cpp  integrals.cpp  materials.cpp  meshgen.cxx  movable.cpp  mpitest.cxx  stopwatch.cxx  threads.cpp
tests/amr/: CMakeLists.txt  dense.cpp  dense.cxx  gradient.cpp  gradient.cxx  interface.cpp  interface.cxx  random.cpp  random.cxx  templates.cpp
tests/eos/: CMakeLists.txt  matter.cpp  mixture.cpp  mixture2.cpp  mixture3.cpp
tests/geom/: CMakeLists.txt  PLIC.h  PLIC_2D.cpp  PLIC_3D.cpp  PLIC_plot.cpp  blocks.cpp  crp_interface.cpp  cuboid_3clip.cpp  cuboid_clip.cpp  curves.cpp  game_of_life.cpp  mapping.cpp  maps_integral.cpp  poly_integrate.cpp  polygon_clip.cpp  polyhedra.cpp  rotations.cpp  splines.cpp  volume_fraction.cpp
tests/math/: CMakeLists.txt  asigma.cpp  derivatives.cpp  hllc_waves.cpp  weno.cpp
tests/matter/: CMakeLists.txt  consistency.cpp  consistensy.cpp  matter-ex.cpp  matter.cpp  mixture.cpp  mixture2.cpp  mixture3.cpp
tests/mesh/: CMakeLists.txt  axial.cpp  backup_read.cpp  backup_save.cpp  balancing.cpp  difftypes.cpp  distributed-amr.cpp  distributed-conv-amr.cpp  distributed-conv.cpp  exact-orb.cpp  game_of_life.cpp  mesh_generator.cpp  movable_mesh.cpp  soa-mesh.cpp  soa-storage.cpp  soamesh.cpp  storage.cpp  voronoi.cpp
tests/phys/: CMakeLists.txt  sedov.cpp
tests/utils/: CMakeLists.txt  a.cpp  balancing.cpp  balancing_mpi.cpp  buffer.cpp  decomposition.cpp  distributed-amr.cpp  distributed-amr2.cpp  distributed-conv-amr.cpp  distributed-conv.cpp  json-config.cpp  json_config.cpp  json_config.json  mpitest.cpp  range.cpp  threads.cpp  vectors.cpp
zephyr/: CMakeLists.txt
zephyr/geom/: CMakeLists.txt  amr_data.h  base.h  boundary.h  box.cpp  box.cxx  box.h  cell.cxx  cell.h  cell_check.cxx  cell_type.h  cube.cpp  cube.h  face.h  faces.h  geom.cxx  geom.h  grid.cpp  grid.h  indexing.h  interface_recovery.cpp  interface_recovery.h  intersection.cpp  intersection.h  line.cpp  line.h  maps.cxx  maps.h  polygon.cpp  polygon.h  polyhedron.cpp  polyhedron.h  quad.cpp  quad.h  sections.cpp  sections.h  side.h  triangle.cpp  triangle.h  vector.h  (+1 more)
zephyr/geom/curves/: CMakeLists.txt  bezier.cpp  bezier.h  cubic_spline.cpp  cubic_spline.h  interpolant.cpp  interpolant.h  lagrange.cpp  lagrange.h  linear_spline.cpp  linear_spline.h
zephyr/geom/eigen/: interface.h
zephyr/geom/generator/: CMakeLists.txt  array2d.h  base_node.cpp  base_node.h  block.cpp  block.h  block_structured.cpp  block_structured.h  block_structured_plot.cpp  bs_vertex.cpp  bs_vertex.h  cuboid.cpp  cuboid.h  generator.cpp  generator.h  rectangle.cpp  rectangle.h  sector.cpp  sector.h  strip.cpp  strip.h
zephyr/geom/grid/: CMakeLists.txt  cell.cpp  grid.cpp  grid_modify.cpp
zephyr/geom/grid-src/: CMakeLists.txt  grid.cpp  grid_finalize.cpp  grid_modify.cpp  grid_validate.cpp
zephyr/geom/primitives/: CMakeLists.txt  adjacent.h  amr_cell.cpp  amr_cell.cxx  amr_cell.h  amr_cell_check.cpp  amr_cell_check.cxx  amr_face.h  amr_faces.cpp  amr_faces.h  amr_vertices.h  base_face.h  basic_face.h  bface.h  bfaces.cpp  bfaces.h  bnodes.h  boundary.h  bvertices.cpp  bvertices.h  cell_type.h  cube.cpp  cube.h  decomposition.h  element.h  line.cpp  line.h  mov_cell.cxx  mov_cell.h  mov_cell_check.cxx  mov_node.h  opt_vertex.h  poly_cell.cxx  poly_cell.h  poly_cell_check.cxx  poly_face.h  poly_faces.h  poly_node.h  poly_nodes.h  polygon.cpp  (+8 more)
zephyr/io/: CMakeLists.txt  csv_file.cpp  csv_file.cxx  csv_file.h  filter.h  pvd_file.cpp  pvd_file.cxx  pvd_file.h  variable.cpp  variable.cxx  variable.h  variables.cpp  variables.cxx  variables.h  vtk_type.cpp  vtk_type.cxx  vtk_type.h  vtr_file.cpp  vtr_file.h  vtu_file.cpp  vtu_file.cxx  vtu_file.h  write_freq.cpp  write_freq.h
zephyr/math/: CMakeLists.txt  funcs.cpp  funcs.h  random.cpp  random.h  vectorization.h
zephyr/math/calc/: CMakeLists.txt  derivatives.cpp  derivatives.h  integrals.cpp  integrals.h  interpolation.cpp  interpolation.h  roots.cpp  roots.h  weno.cpp  weno.h
zephyr/math/cfd/: CMakeLists.txt  cir.cpp  cir.h  compute_grad.h  exact.cpp  exact.h  face_extra.h  fluxes.cpp  fluxes.h  gradient.h  hll.h  hllc.cpp  hllc.h  limiter.cxx  limiter.h  models.cpp  models.h  rotate.cpp  rotate.h  rusanov.cpp  (+1 more)
zephyr/mesh/: CMakeLists.txt  amr_face.cxx  cell.cxx  cell.h  distributor.cxx  distributor.h  face.cxx  face.h  index.h  memory.h  mesh.cxx  mesh.h  mesh_check.cxx  mesh_refine.cxx  range.cxx  range.h  rotation.h  side.h  storage.cpp  storage.cxx  storage.h  threads.h
zephyr/phys/: CMakeLists.txt  fractions.cpp  fractions.h  literals.h
zephyr/utils/: CMakeLists.txt  array2d.h  buffer.h  csr.h  error_list.h  json.cpp  json.h  logger.cpp  logger.h  matplotlib.h  mpi.cpp  mpi.cxx  mpi.h  mpi_type.h  numpy.cpp  numpy.h  pyplot.cpp  pyplot.h  range.h  span.h  stopwatch.cpp  stopwatch.cxx  stopwatch.h  storage.cpp  storage.h  thread-pool.h  threads.cpp  threads.cxx  threads.h
(+445 files in other folders)
