set(ADVECTION   1)
set(CONVECTION  1)
set(TRANSFER    1)
set(MEMBRANE    1)
set(RIEMANN     1)
set(SHU_OSHER   1)
set(WAVE2D      1)
set(R_TESTER    1)
set(SHOCK_TUBE  1)
set(MM_R_TESTER 1)
set(MM_2D_TESTS 1)


if (SHOCK_TUBE)
    message(STATUS "Build shock tube test")
    add_executable(shock_tube shock-tube.cpp)
    target_link_directories(shock_tube PUBLIC zephyr)
    target_link_libraries(shock_tube PUBLIC zephyr)
    install(TARGETS shock_tube DESTINATION problems)
endif()

if (ADVECTION)
    message(STATUS "Build advection test")
    add_executable(advection advection.cpp)
    target_include_directories(advection PUBLIC zephyr)
    target_link_libraries(advection PUBLIC zephyr)
    install(TARGETS advection DESTINATION problems)
endif()

if (CONVECTION)
    message(STATUS "Build convection test")
    add_executable(convection convection.cpp)
    target_include_directories(convection PUBLIC zephyr)
    target_link_libraries(convection PUBLIC zephyr)
    install(TARGETS convection DESTINATION problems)
endif()

if (TRANSFER)
    message(STATUS "Build transfer test")
    add_executable(transfer transfer.cpp)
    target_include_directories(transfer PUBLIC zephyr)
    target_link_libraries(transfer PUBLIC zephyr)
    install(TARGETS transfer DESTINATION problems)
endif()

if (MEMBRANE)
    message(STATUS "Build Membrane test")
    add_executable(membrane membrane.cpp)
    target_include_directories(membrane PUBLIC zephyr)
    target_link_libraries(membrane PUBLIC zephyr)
    install(TARGETS membrane DESTINATION problems)
endif()

if (RIEMANN)
    message(STATUS "Build Riemann test")
    add_executable(riemann riemann.cpp)
    target_include_directories(riemann PUBLIC zephyr)
    target_link_libraries(riemann PUBLIC zephyr)
    install(TARGETS riemann DESTINATION problems)
endif()

if (SHU_OSHER)
    message(STATUS "Build Shu-Osher test")
    add_executable(shu-osher shu_osher.cpp)
    target_include_directories(shu-osher PUBLIC zephyr)
    target_link_libraries(shu-osher PUBLIC zephyr)
    install(TARGETS shu-osher DESTINATION problems)
endif()

if (WAVE2D)
    message(STATUS "Build Wave2D test")
    add_executable(wave2D wave2D.cpp)
    target_include_directories(wave2D PUBLIC zephyr)
    target_link_libraries(wave2D PUBLIC zephyr)
    install(TARGETS wave2D DESTINATION problems)
endif()

if (R_TESTER)
    message(STATUS "Build Riemann tester")
    add_executable(r_tester riemann_tester.cpp)
    target_include_directories(r_tester PUBLIC zephyr)
    target_link_libraries(r_tester PUBLIC zephyr)
    install(TARGETS r_tester DESTINATION problems)
endif()

if (MM_R_TESTER)
    message(STATUS "Build MmRiemann tester")
    add_executable(mm_r_tester mm_riemann_tester.cpp)
    target_include_directories(mm_r_tester PUBLIC zephyr)
    target_link_libraries(mm_r_tester PUBLIC zephyr)
    install(TARGETS mm_r_tester DESTINATION problems)
endif()

if (MM_2D_TESTS)
    message(STATUS "Build MM 2D tests")
    add_executable(mm_2d_tests mm_2d_tests.cpp)
    target_include_directories(mm_2d_tests PUBLIC zephyr)
    target_link_libraries(mm_2d_tests PUBLIC zephyr)
    install(TARGETS mm_2d_tests DESTINATION problems)
endif()