add_subdirectory(single-fluid)
add_subdirectory(multi-fluid)

set(ADVECTION   1)
set(CONVECTION  1)
set(TRANSFER    1)
set(MEMBRANE    1)
set(SHU_OSHER   1)
set(WENO        0)

if (ADVECTION)
    message(STATUS "Build advection test")
    add_executable(advection advection.cpp)
    target_include_directories(advection PUBLIC zephyr)
    target_link_libraries(advection PUBLIC zephyr)
    install(TARGETS advection DESTINATION problems)
endif()

if (CONVECTION)
    message(STATUS "Build convection test")
    add_executable(convection convection.cpp)
    target_include_directories(convection PUBLIC zephyr)
    target_link_libraries(convection PUBLIC zephyr)
    install(TARGETS convection DESTINATION problems)
endif()

if (TRANSFER)
    message(STATUS "Build transfer test")
    add_executable(transfer transfer.cpp)
    target_include_directories(transfer PUBLIC zephyr)
    target_link_libraries(transfer PUBLIC zephyr)
    install(TARGETS transfer DESTINATION problems)
endif()

if (MEMBRANE)
    message(STATUS "Build Membrane test")
    add_executable(membrane membrane.cpp)
    target_include_directories(membrane PUBLIC zephyr)
    target_link_libraries(membrane PUBLIC zephyr)
    install(TARGETS membrane DESTINATION problems)
endif()

if (SHU_OSHER)
    message(STATUS "Build Shu-Osher test")
    add_executable(shu-osher shu_osher.cpp)
    target_include_directories(shu-osher PUBLIC zephyr)
    target_link_libraries(shu-osher PUBLIC zephyr)
    install(TARGETS shu-osher DESTINATION problems)
endif()

if (WENO)
    message(STATUS "Build WENO tests")
    add_executable(weno weno.cpp)
    target_include_directories(weno PUBLIC zephyr)
    target_link_libraries(weno PUBLIC zephyr)
    install(TARGETS weno DESTINATION problems)
endif()