add_subdirectory(amr)
add_subdirectory(eos)

set(MESHGEN   1)
set(MPITEST   0)
set(STOPWATCH 1)
set(THREADS   1)

if (MESHGEN)
    message(STATUS "Build meshgen test")
    add_executable(meshgen meshgen.cxx)
    target_include_directories(meshgen PUBLIC zephyr)
    target_link_libraries(meshgen PUBLIC zephyr)
    install(TARGETS meshgen DESTINATION tests)
endif()

if (MPITEST)
    message(STATUS "Build mpi test")
    add_executable(mpitest mpitest.cxx)
    target_include_directories(mpitest PUBLIC zephyr)
    target_link_libraries(mpitest PUBLIC zephyr)
    install(TARGETS mpitest DESTINATION tests)
endif()

if (STOPWATCH)
    message(STATUS "Build stopwatch test")
    add_executable(stopwatch stopwatch.cxx)
    target_include_directories(stopwatch PUBLIC zephyr)
    target_link_libraries(stopwatch PUBLIC zephyr)
    install(TARGETS stopwatch DESTINATION tests)
endif()

if (THREADS)
    message(STATUS "Build multithreading test")
    add_executable(threads threads.cpp)
    target_include_directories(threads PUBLIC zephyr)
    target_link_libraries(threads PUBLIC zephyr)
    install(TARGETS threads DESTINATION tests)
endif()