add_subdirectory(amr)
add_subdirectory(eos)
add_subdirectory(utils)

set(GEOMETRY  1)
set(INTEGRALS 1)
set(MESHGEN   1)
set(MOVABLE   1)

if (GEOMETRY)
    message(STATUS "Build geometry test")
    add_executable(geometry geometry.cpp)
    target_include_directories(geometry PUBLIC zephyr)
    target_link_libraries(geometry PUBLIC zephyr)
    install(TARGETS geometry DESTINATION tests)
endif()

if (MESHGEN)
    message(STATUS "Build meshgen test")
    add_executable(meshgen meshgen.cxx)
    target_include_directories(meshgen PUBLIC zephyr)
    target_link_libraries(meshgen PUBLIC zephyr)
    install(TARGETS meshgen DESTINATION tests)
endif()

if (INTEGRALS)
    message(STATUS "Build integrals test")
    add_executable(integrals integrals.cpp)
    target_include_directories(integrals PUBLIC zephyr)
    target_link_libraries(integrals PUBLIC zephyr)
    install(TARGETS integrals DESTINATION tests)
endif()

if (MOVABLE)
    message(STATUS "Build movable mesh test")
    add_executable(movable movable.cpp)
    target_include_directories(movable PUBLIC zephyr)
    target_link_libraries(movable PUBLIC zephyr)
    install(TARGETS movable DESTINATION tests)
endif()
