set(RANDOM    1)
set(INTERFACE 1)
set(GRADIENT  1)
set(DENSE     1)

if (RANDOM)
    message(STATUS "Build AMR random test")
    add_executable(random random.cxx)
    target_include_directories(random PUBLIC zephyr)
    target_link_libraries(random PUBLIC zephyr)
    install(TARGETS random DESTINATION tests/amr)
endif()

if (INTERFACE)
    message(STATUS "Build AMR interface test")
    add_executable(interface interface.cxx)
    target_include_directories(interface PUBLIC zephyr)
    target_link_libraries(interface PUBLIC zephyr)
    install(TARGETS interface DESTINATION tests/amr)
endif()

if (GRADIENT)
    message(STATUS "Build AMR gradient test")
    add_executable(gradient gradient.cxx)
    target_include_directories(gradient PUBLIC zephyr)
    target_link_libraries(gradient PUBLIC zephyr)
    install(TARGETS gradient DESTINATION tests/amr)
endif()

if (DENSE)
    message(STATUS "Build AMR dense test")
    add_executable(dense dense.cxx)
    target_include_directories(dense PUBLIC zephyr)
    target_link_libraries(dense PUBLIC zephyr)
    install(TARGETS dense DESTINATION tests/amr)
endif()