set(MATTER  1)
set(MIXTURE 1)

if (MATTER)
    message(STATUS "Build matter test")
    add_executable(matter matter.cpp)
    target_include_directories(matter PUBLIC zephyr)
    target_link_libraries(matter PUBLIC zephyr)
    install(TARGETS matter DESTINATION tests)
endif()

if (MIXTURE)
    message(STATUS "Build mixture test")
    add_executable(mixture mixture.cpp)
    target_include_directories(mixture PUBLIC zephyr)
    target_link_libraries(mixture PUBLIC zephyr)
    install(TARGETS mixture DESTINATION tests)

    add_executable(mixture2 mixture2.cpp)
    target_include_directories(mixture2 PUBLIC zephyr)
    target_link_libraries(mixture2 PUBLIC zephyr)
    install(TARGETS mixture2 DESTINATION tests)

    add_executable(mixture3 mixture3.cpp)
    target_include_directories(mixture3 PUBLIC zephyr)
    target_link_libraries(mixture3 PUBLIC zephyr)
    install(TARGETS mixture3 DESTINATION tests)
endif()